--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-type-animation": "^3.0.1",
     "tailwindcss": "3.3.2"
   }
 }
